err/gevent-socketio2.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/WebOb-1.4.egg-info'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/gevent_socketio2-0.2.8.egg-info'...
Listing './lib/python3.5/site-packages/gevent_websocket-0.9.3.egg-info'...
Listing './lib/python3.5/site-packages/geventwebsocket'...
Listing './lib/python3.5/site-packages/geventwebsocket/gunicorn'...
Listing './lib/python3.5/site-packages/geventwebsocket/protocols'...
Compiling './lib/python3.5/site-packages/geventwebsocket/protocols/wamp.py'...
***   File "./lib/python3.5/site-packages/geventwebsocket/protocols/wamp.py", line 175
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/greenlet-0.4.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.4.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/socketio'...
Compiling './lib/python3.5/site-packages/socketio/debug_util.py'...
***   File "./lib/python3.5/site-packages/socketio/debug_util.py", line 11
    print """
    ##############################################
    #### CALL STACK                           ####
    ##############################################
    """
             
                                                  
                                                  
                                                  
      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/socketio/engine'...
Compiling './lib/python3.5/site-packages/socketio/engine/handler.py'...
***   File "./lib/python3.5/site-packages/socketio/engine/handler.py", line 48
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/socketio/engine/transports.py'...
***   File "./lib/python3.5/site-packages/socketio/engine/transports.py", line 337
    except WebSocketError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/socketio/event_emitter'...
Listing './lib/python3.5/site-packages/webob'...
Listing './lib/python3.5/site-packages/ws4py'...
Listing './lib/python3.5/site-packages/ws4py/client'...
Listing './lib/python3.5/site-packages/ws4py/server'...
Listing './lib/python3.5/site-packages/ws4py-0.3.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
